--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -81,6 +81,7 @@
 .main-event-poster img {
   display: block;
   width: 100%;
+  height: 330px;
   border-radius: 8px;
   border: 2px solid rgba(255, 255, 255, 0.3);
 }
